--------------------
Zmiany w ZPD 1.7.5 (2021-05-08)

- polacz() używa wewnętrznie `DBI::dbConnect((...), check_interrupts = TRUE)`,
  co pozwala na łatwiejsze przerywanie wykonywanych zapytań.
- Aktualizacja wywołań dplyr-a do akutalnej (1.0.0) składni (zastąpieinie
  wszystkich `verb_()` przez odpowiednie wywołania `verb()`)

--------------------
Zmiany w ZPD 1.7.4 (2019-09-16)

- Dostosowanie do dbplyr v1.4, który ewaluuje teraz w kontekście bazy danych
  wyrażenia postaci `zmienna$kolumna` i jeśli takie wyrażenie powinno być
  ewaluowane lokalnie i tylko jego wynik przekazany do bazy danych, trzeba
  to explicite wskazać.

--------------------
Zmiany w ZPD 1.7.3 (2018-01-29)

- Dostosowanie do dbplyr v1.4, który (co w sumie rozsądne) wymusza teraz
  przekazanie połączenia bazy danych jako parametru funkcji `escape()`
  (https://github.com/zozlak/ZPD/issues/15)

--------------------
Zmiany w ZPD 1.7.2 (2018-01-29)

- Usunięcie ostrzeżeń generowanych przez RPostgres
  (https://github.com/zozlak/ZPD/issues/11)
- Usunięcie błędnego mapowania kolumn w pobierz_uczniow(daneOsobowe = T)
  (https://github.com/zozlak/ZPD/issues/10)

--------------------
Zmiany w ZPD 1.7.1 (2018-01-10)

- Korekta kodowania znaków odczytywanych z bazy (RPostgres obsługuje to nieco
  inaczej niż obsługiwał RPostgreSQL)

--------------------
Zmiany w ZPD 1.7.0 (2018-01-10)

- Zmiana backendu bazodanowego na RPostgres (który pojawił sie wreszcie w
  CRAN-ie). RPostgreSQL posiada wiele narowów i od kilku lat nie jest 
  aktualizowany.
- Parametr `doPrezentacji` funkcji `pobierz_wskazniki()` jest teraz stosowany
  zarówno do tablicy `wskazniki`, jak i `sl_wskazniki` (dotychczas filtr tablicy
  `sl_wskazniki` był na sztywno ustawiony na `TRUE`, co uniemożliwiało pobranie
  wskaźników oznaczonych w niej jako nie do prezentacji).
- Zmienna "wsk_do_prezentacji" w grupie danych "wskazniki" odpowiada teraz
  kolumnie "wskazniki.do_prezentacji", a kolumna "sl_wskazniki.do_prezentacji"