@@ -1,8 +1,10 @@
 --------------------
 Zmiany w ZPD 1.7.5 (2021-05-08)
 
-- polacz() używa wewnętrznie `DBI::dbConnect((...), check_interrupts = TRUE)`,
-  co pozwala na łatwiejsze przerywanie wykonywanych zapytań.
+- polacz() przyjmuje dodatkowe parametry (...) które są przekazywane do 
+  DBI::dbConnect()
+- filtruj_przystapienia() materializuje listę testów, co znacznie zmniejsza
+  obciążenie serwera
 - Aktualizacja wywołań dplyr-a do akutalnej (1.0.0) składni (zastąpieinie
   wszystkich `verb_()` przez odpowiednie wywołania `verb()`)
 
